--- a/view/commotion/splash.htm
+++ b/view/commotion/splash.htm
@@ -1,5 +1,5 @@
 <%+header%>
-
+    
 <ul class="tabs">
   <li class="tabmenu-item-splashtext">
     <a href="<%=controller%>/admin/services/splash/splashtext/">Splashtext</a>
@@ -7,9 +7,7 @@
 </ul>
 
 <form method="post" action="<%=controller%>/admin/services/splash/submit">
-  <div>
-		<!--<script type="text/javascript" src="/luci-static/resources/cbi.js"></script>-->
-  </div>
+  <div><script type="text/javascript" src="/luci-static/resources/cbi.js"></script></div>
   <div class="cbi-map" id="cbi-commotion-splash">
     <h2><a id="content" name="content">Captive Portal</a></h2>
     <div class="cbi-map-descr">Nodogsplash offers a simple way to provide restricted access to an internet connection.</div>
@@ -32,7 +30,7 @@
     
     
     
-    <!-- !!!!!!!!!!!!  after-authentication page, redirect to original request or to another custom page !!!!!!!! -->
+    <!-- !!!!!!!!!!!!  after-authentication page, redirect to original request or to another custom page? !!!!!!!! -->
     
     
 <!-- /nsection -->
@@ -43,13 +41,9 @@
     <table class="cbi-section-table">
       <tr class="cbi-section-table-titles">
         <th class="cbi-section-table-cell">Network</th>
-	<th class="cbi-section-table-cell"></th>
-	<th class="cbi-section-table-cell">&#160;</th>
       </tr>
       <tr class="cbi-section-table-descr">
         <th class="cbi-section-table-cell">Intercept client traffic on this Interface</th>
-	<th class="cbi-section-table-cell"></th>
-	<th class="cbi-section-table-cell"></th>
       </tr>
       <tr class="cbi-section-table-row">
         <td class="cbi-value-field">
@@ -62,30 +56,12 @@
 		  <option id="cbi-commotion-splash-zone-<%=zone%>" value="<%=zone%>"><%=zone%></option>
 	      <% end %>
 	    </select>
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.zone', '/luci-static/resources', '', true);</script>
 	  </div>
 	  <div id="cbip-commotion-splash-zone"></div>
 	</td>
-	<td class="cbi-value-field">
-	  <div id="cbi-commotion-splash-network">
-	    <select class="cbi-input-select" id="cbid.commotion-splash.network" name="cbid.commotion-splash.network" size="1">
-	      <%- for network in splash.networks do
-	        if splash.network_selected == network then -%>
-		  <option id="cbi-commotion-splash-network-<%=network%>" value="<%=network%>" selected="selected"><%=network%></option>
-		<% else %>
-		  <option id="cbi-commotion-splash-network-<%=network%>" value="<%=network%>"><%=network%></option>
-	      <% end %>
-	    </select>
-	  </div>
-	  <div id="cbip-commotion-splash-network"></div>
-	</td>
-	<td class="cbi-section-table-cell">
-	  <input class="cbi-button cbi-button-remove" type="submit" value="Delete" name="cbi.rts.commotion-splash" alt="Delete" title="Delete" />
-	</td>
       </tr>
     </table>
-    <div class="cbi-section-create cbi-tblsection-create">
-      <input class="cbi-button cbi-button-add" type="submit" value="Add" name="cbi.cts.commotion-splash.iface." title="Add" />
-    </div>
   </div>
 </fieldset>
 <!-- /tblsection --><!-- tblsection -->
@@ -96,27 +72,20 @@
     <table class="cbi-section-table">
       <tr class="cbi-section-table-titles">
         <th class="cbi-section-table-cell">MAC Address</th>
-	<th class="cbi-section-table-cell">&#160;</th>
       </tr>
       <tr class="cbi-section-table-descr">
         <th class="cbi-section-table-cell"></th>
-	<th class="cbi-section-table-cell"></th>
       </tr>
       <tr class="cbi-section-table-row">
         <td class="cbi-value-field">
           <div id="cbi-commotion-splash-mac">
 	    <input type="text" class="cbi-input-text" name="cbid.commotion-splash.mac" id="cbid.commotion-splash.mac" value="" />
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.mac', '/luci-static/resources', '', true);</script>
 	  </div>
 	  <div id="cbip-commotion-splash-mac"></div>
         </td>
-        <td class="cbi-section-table-cell">
-	  <input class="cbi-button cbi-button-remove" type="submit" value="Delete" name="cbi.rts.commotion-splash" alt="Delete" title="Delete" />
-        </td>
       </tr>
     </table>
-    <div class="cbi-section-create cbi-tblsection-create">
-      <input class="cbi-button cbi-button-add" type="submit" value="Add" name="cbi.cts.commotion-splash.whitelist." title="Add" />
-    </div>
   </div>
 </fieldset>
 <!-- /tblsection --><!-- tblsection -->
@@ -127,27 +96,20 @@
     <table class="cbi-section-table">
       <tr class="cbi-section-table-titles">
         <th class="cbi-section-table-cell">MAC Address</th>
-	<th class="cbi-section-table-cell">&#160;</th>
       </tr>
       <tr class="cbi-section-table-descr">
         <th class="cbi-section-table-cell"></th>
-	<th class="cbi-section-table-cell"></th>
       </tr>
       <tr class="cbi-section-table-row">
 	<td class="cbi-value-field">
-          <div id="cbi-commotion-splash-mac">
-	    <input type="text" class="cbi-input-text" name="cbid.commotion-splash.mac" id="cbid.commotion-splash.mac" value="" />
+          <div id="cbi-commotion-splash-macblock">
+	    <input type="text" class="cbi-input-text" name="cbid.commotion-splash.macblock" id="cbid.commotion-splash.macblock" value="" />
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.macblock', '/luci-static/resources', '', true);</script>
 	  </div>
-	  <div id="cbip-commotion-splash-mac"></div>
-        </td>
-        <td class="cbi-section-table-cell">
-	  <input class="cbi-button cbi-button-remove" type="submit" value="Delete" name="cbi.rts.commotion-splash" alt="Delete" title="Delete" />
+	  <div id="cbip-commotion-splash-macblock"></div>
         </td>
       </tr>
     </table>
-    <div class="cbi-section-create cbi-tblsection-create">
-      <input class="cbi-button cbi-button-add" type="submit" value="Add" name="cbi.cts.commotion-splash.blacklist." title="Add" />
-    </div>
   </div>
 </fieldset>
 <!-- /tblsection --><!-- tblsection -->
@@ -158,35 +120,20 @@
     <table class="cbi-section-table">
       <tr class="cbi-section-table-titles">
         <th class="cbi-section-table-cell">IP Address</th>
-	<th class="cbi-section-table-cell">Netmask</th>
-	<th class="cbi-section-table-cell">&#160;</th>
       </tr>
       <tr class="cbi-section-table-descr">
-	<th class="cbi-section-table-cell"></th>
-	<th class="cbi-section-table-cell">optional when using host addresses</th>
-	<th class="cbi-section-table-cell"></th>
+	<th class="cbi-section-table-cell">CIDR notation optional</th>
       </tr>
       <tr class="cbi-section-table-row">
         <td class="cbi-value-field">
           <div id="cbi-commotion-splash-ipaddr">
             <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddr" id="cbid.commotion-splash.ipaddr" value="" />
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.ipaddr', '/luci-static/resources', '', true);</script>
           </div>
           <div id="cbip-commotion-splash-ipaddr"></div>
         </td>
-        <td class="cbi-value-field">
-          <div id="cbi-commotion-splash-netmask">
-            <input type="text" class="cbi-input-text" name="cbid.commotion-splash.netmask" id="cbid.commotion-splash.netmask" value="" />
-          </div>
-          <div id="cbip-commotion-splash-netmask"></div>
-        </td>
-        <td class="cbi-section-table-cell">
-          <input class="cbi-button cbi-button-remove" type="submit" value="Delete" name="cbi.rts.commotion-splash" alt="Delete" title="Delete" />
-	</td>
       </tr>
     </table>
-    <div class="cbi-section-create cbi-tblsection-create">
-      <input class="cbi-button cbi-button-add" type="submit" value="Add" name="cbi.cts.commotion-splash.subnet." title="Add" />
-    </div>
   </div>
 </fieldset>
 <!-- /tblsection -->
