--- a/luci/view/commotion-splash/splash.htm
+++ b/luci/view/commotion-splash/splash.htm
@@ -13,9 +13,9 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
       <legend>General</legend>
       <div class="cbi-section-node" id="cbi-commotion-splash-general">
 	<div class="cbi-value" id="cbi-commotion-splash-general-leasetime">
-	  <label class="cbi-value-title" for="cbid.commotion-splash.general.leasetime">Clearance time</label>
+	  <label class="cbi-value-title" for="cbid.commotion-splash.leasetime">Clearance time</label>
 	  <div class="cbi-value-field">
-	    <input type="text" class="cbi-input-text" name="cbid.commotion-splash.general.leasetime" id="cbid.commotion-splash.general.leasetime" value="<%=splash.leasetime%>" /><br />
+	    <input type="text" class="cbi-input-text" name="cbid.commotion-splash.leasetime" id="cbid.commotion-splash.leasetime" value="<%=splash.leasetime%>" /><br />
 	    <div class="cbi-value-description">
 	      <span class="cbi-value-helpicon"><img src="/luci-static/resources/cbi/help.gif" alt="help" /></span>
 		Clients that have accepted the captive portal are allowed to use the network for that many hours.
@@ -23,7 +23,6 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
 	  </div>
 	</div>
       </div>
-      <br />
     </fieldset>
     
     
@@ -46,12 +45,16 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
       <tr class="cbi-section-table-row">
         <td class="cbi-value-field">
           <div id="cbi-commotion-splash-zones">
-            <input type="text" class="cbi-input-text" id="cbid.commotion-splash.zone" name="cbid.commotion-splash.zone" <% if splash.zone_selected then %>value="<%=splash.zone_selected%>" <% end %>/>
-	    <script type="text/javascript">cbi_combobox_init('cbid.commotion-splash.zone',{ 
-	      <% first = true; current = ''; for zone, selected in pairs(splash.zones) do %>
-	        <%- if first then first = false else %>,<% end -%>'<%=zone%>':'<%=zone%>'
-	        <%- if selected == "selected" then current = zone end -%>
-	      <%- end %> }, <%=current%>, '');
+            <% for i, selected_zone in pairs(splash.selected_zones) do %>
+              <input type="text" class="cbi-input-text" id="cbid.commotion-splash.zones" name="cbid.commotion-splash.zones" value="<%=selected_zone%>" />
+	    <% end %>
+	    <% if not next(splash.selected_zones) then %>
+	      <input type="text" class="cbi-input-text" id="cbid.commotion-splash.zones" name="cbid.commotion-splash.zones" />
+	    <% end %>
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.zones', '/luci-static/resources', '', true, [{
+	      <% first = true; for zone, selected in pairs(splash.zones) do %>
+		<%- if first then first = false else %>,<% end -%>'<%=zone%>':'<%=zone%>'
+	      <%- end %>},'']);
 	    </script>
 	  </div>
 	</td>
@@ -73,14 +76,14 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
       </tr>
       <tr class="cbi-section-table-row">
         <td class="cbi-value-field">
-          <div id="cbi-commotion-splash-mac">
+          <div id="cbi-commotion-splash-whitelist">
             <% for _, whitelist in pairs(splash.whitelist) do %>
-	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.mac" id="cbid.commotion-splash.mac" value="<%=whitelist%>" /><br />
+	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.whitelist" id="cbid.commotion-splash.whitelist" value="<%=whitelist%>" /><br />
 	    <% end %>
 	    <% if not next(splash.whitelist) then %>
-	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.mac" id="cbid.commotion-splash.mac" value="" /><br />
+	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.whitelist" id="cbid.commotion-splash.whitelist" value="" /><br />
 	    <% end %>
-	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.mac', '/luci-static/resources', '', true);</script>
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.whitelist', '/luci-static/resources', '', true);</script>
 	  </div>
         </td>
       </tr>
@@ -101,14 +104,14 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
       </tr>
       <tr class="cbi-section-table-row">
 	<td class="cbi-value-field">
-          <div id="cbi-commotion-splash-macblock">
+          <div id="cbi-commotion-splash-blacklist">
             <% for _, blacklist in pairs(splash.blacklist) do %>
-	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.macblock" id="cbid.commotion-splash.macblock" value="<%=blacklist%>" />
+	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.blacklist" id="cbid.commotion-splash.blacklist" value="<%=blacklist%>" />
 	    <% end %>
 	    <% if not next(splash.blacklist) then %>
-	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.macblock" id="cbid.commotion-splash.macblock" value="" />
+	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.blacklist" id="cbid.commotion-splash.blacklist" value="" />
 	    <% end %>
-	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.macblock', '/luci-static/resources', '', true);</script>
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.blacklist', '/luci-static/resources', '', true);</script>
 	  </div>
         </td>
       </tr>
@@ -125,18 +128,18 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
         <th class="cbi-section-table-cell">IP Address</th>
       </tr>
       <tr class="cbi-section-table-descr">
-	<th class="cbi-section-table-cell">CIDR notation optional</th>
+	<th class="cbi-section-table-cell">CIDR notation optional (e.g. 192.168.1.0/24)</th>
       </tr>
       <tr class="cbi-section-table-row">
         <td class="cbi-value-field">
-          <div id="cbi-commotion-splash-ipaddr">
+          <div id="cbi-commotion-splash-ipaddrs">
             <% for _, subnet in pairs(splash.subnet) do %>
-              <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddr" id="cbid.commotion-splash.ipaddr" value="<%=subnet%>" />
+              <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddrs" id="cbid.commotion-splash.ipaddrs" value="<%=subnet%>" />
 	    <% end %>
 	    <% if not next(splash.subnet) then %>
-              <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddr" id="cbid.commotion-splash.ipaddr" value="" />
+              <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddrs" id="cbid.commotion-splash.ipaddrs" value="" />
             <% end %>
-	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.ipaddr', '/luci-static/resources', '', true);</script>
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.ipaddrs', '/luci-static/resources', '', true);</script>
           </div>
         </td>
       </tr>
@@ -146,9 +149,8 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
 <!-- /tblsection -->
 	<br />
 </div>
-<div class="cbi-page-actions">
-  <input class="cbi-button cbi-button-apply" type="submit" name="cbi.apply" value="Save &#38; Apply" />		
-  <input class="cbi-button cbi-button-save" type="submit" value="Save" />
+<div class="cbi-page-actions">		
+  <input class="cbi-button cbi-button-save" type="submit" value="Submit" />
   <input class="cbi-button cbi-button-reset" type="reset" value="Reset" />
 </div>
 </form>
