fixed input validation, submission

--- a/luci/view/commotion-splash/splash.htm
+++ b/luci/view/commotion-splash/splash.htm
@@ -9,6 +9,8 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
   <div class="cbi-map" id="cbi-commotion-splash">
     <h2><a id="content" name="content">Captive Portal</a></h2>
     <div class="cbi-map-descr">Nodogsplash offers a simple way to provide restricted access to an internet connection.</div>
+    <% if err and err.notice ~= "" then %><div class="notice"><%=err.notice%></div><% end %>
+    
     <fieldset class="cbi-section" id="cbi-commotion-splash-general">
       <legend>General</legend>
       <div class="cbi-section-node" id="cbi-commotion-splash-general">
@@ -16,6 +18,7 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
 	  <label class="cbi-value-title" for="cbid.commotion-splash.leasetime">Clearance time</label>
 	  <div class="cbi-value-field">
 	    <input type="text" class="cbi-input-text" name="cbid.commotion-splash.leasetime" id="cbid.commotion-splash.leasetime" value="<%=splash.leasetime%>" /><br />
+	    <%if err then%><div class="error"><%=err.leasetime%></div><%end%>
 	    <div class="cbi-value-description">
 	      <span class="cbi-value-helpicon"><img src="/luci-static/resources/cbi/help.gif" alt="help" /></span>
 		Clients that have accepted the captive portal are allowed to use the network for that many hours.
@@ -46,14 +49,14 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
         <td class="cbi-value-field">
           <div id="cbi-commotion-splash-zones">
             <% for i, selected_zone in pairs(splash.selected_zones) do %>
-              <input type="text" class="cbi-input-text" id="cbid.commotion-splash.zones" name="cbid.commotion-splash.zones" value="<%=selected_zone%>" />
+              <input type="text" class="cbi-input-text" id="cbid.commotion-splash.selected_zones" name="cbid.commotion-splash.selected_zones" value="<%=selected_zone%>" />
 	    <% end %>
 	    <% if not next(splash.selected_zones) then %>
-	      <input type="text" class="cbi-input-text" id="cbid.commotion-splash.zones" name="cbid.commotion-splash.zones" />
+	      <input type="text" class="cbi-input-text" id="cbid.commotion-splash.selected_zones" name="cbid.commotion-splash.selected_zones" />
 	    <% end %>
-	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.zones', '/luci-static/resources', '', true, [{
-	      <% first = true; for zone, selected in pairs(splash.zones) do %>
-		<%- if first then first = false else %>,<% end -%>'<%=zone%>':'<%=zone%>'
+	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.selected_zones', '/luci-static/resources', '', true, [{'':''
+	      <% for _, zone in pairs(splash.zones) do %>
+		,'<%=zone%>':'<%=zone%>'
 	      <%- end %>},'']);
 	    </script>
 	  </div>
@@ -84,6 +87,7 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
 	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.whitelist" id="cbid.commotion-splash.whitelist" value="" /><br />
 	    <% end %>
 	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.whitelist', '/luci-static/resources', '', true);</script>
+	    <%if err then%><div class="error"><%=err.whitelist%></div><%end%>
 	  </div>
         </td>
       </tr>
@@ -112,6 +116,7 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
 	      <input type="text" class="cbi-input-text" name="cbid.commotion-splash.blacklist" id="cbid.commotion-splash.blacklist" value="" />
 	    <% end %>
 	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.blacklist', '/luci-static/resources', '', true);</script>
+	    <%if err then%><div class="error"><%=err.blacklist%></div><%end%>
 	  </div>
         </td>
       </tr>
@@ -119,7 +124,7 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
   </div>
 </fieldset>
 <!-- /tblsection --><!-- tblsection -->
-<fieldset class="cbi-section" id="cbi-commotion-splash-subnet">
+<fieldset class="cbi-section" id="cbi-commotion-splash-ipaddrs">
   <legend>Allowed hosts/subnets</legend>
   <div class="cbi-section-descr">Hosts and Networks that are listed here are excluded from splashing, i.e. they are always allowed.</div>
   <div class="cbi-section-node">
@@ -133,13 +138,14 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
       <tr class="cbi-section-table-row">
         <td class="cbi-value-field">
           <div id="cbi-commotion-splash-ipaddrs">
-            <% for _, subnet in pairs(splash.subnet) do %>
-              <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddrs" id="cbid.commotion-splash.ipaddrs" value="<%=subnet%>" />
+            <% for _, ipaddr in pairs(splash.ipaddrs) do %>
+              <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddrs" id="cbid.commotion-splash.ipaddrs" value="<%=ipaddr%>" />
 	    <% end %>
-	    <% if not next(splash.subnet) then %>
+	    <% if not next(splash.ipaddrs) then %>
               <input type="text" class="cbi-input-text" name="cbid.commotion-splash.ipaddrs" id="cbid.commotion-splash.ipaddrs" value="" />
             <% end %>
 	    <script type="text/javascript">cbi_dynlist_init('cbid.commotion-splash.ipaddrs', '/luci-static/resources', '', true);</script>
+	    <%if err then%><div class="error"><%=err.ipaddrs%></div><%end%>
           </div>
         </td>
       </tr>
