fixed various bugs; added LuCI splash page

--- a/luasrc/view/commotion-splash/splash_settings.htm
+++ b/luasrc/view/commotion-splash/splash_settings.htm
@@ -160,3 +160,5 @@ table.cbi-section-table input, table.cbi-section-table textarea, table.cbi-secti
   <input class="cbi-button cbi-button-reset" type="reset" value="Reset" />
 </div>
 </form>
+
+<%+footer%>
